--- a/build.gradle
+++ b/build.gradle
@@ -11,14 +11,20 @@ repositories {
 }
 
 dependencies {
-	compile ('org.springframework.boot:spring-boot-starter-actuator:1.3.3.RELEASE')
-	compile ('org.springframework.boot:spring-boot-starter-jersey:1.3.3.RELEASE')
-	compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.3.5.RELEASE'
+	compile ('org.springframework.boot:spring-boot-starter-web:1.4.0.RELEASE')
+	compile ('org.springframework.boot:spring-boot-starter-actuator:1.4.0.RELEASE')
+	compile ('org.springframework.boot:spring-boot-starter-jersey:1.4.0.RELEASE')
+	compile ('org.springframework.boot:spring-boot-starter-data-jpa:1.4.0.RELEASE')
+	compile ('org.springframework.boot:spring-boot-starter-jetty:1.4.0.RELEASE')
 	compile ('io.jsonwebtoken:jjwt:0.6.0')
 	compile ('org.hibernate:hibernate-core:4.3.11.Final')
     compile ('org.hibernate:hibernate-c3p0:4.3.11.Final')
     compile ('org.hibernate:hibernate-entitymanager:4.3.11.Final')
     compile ('org.postgresql:postgresql:9.4.1208')
+}
+
+configurations {
+    compile.exclude module: "spring-boot-starter-tomcat"
 }
 
 jar {
