publish maven artifact

--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,11 @@ jar {
 }
 
 publishing {
+	repositories {
+	    maven {
+	        url manveUrlWrite
+	    }
+	}
     publications {
         mavenJava(MavenPublication) {
         	groupId 'com.odontoweb.microservices'
