feat: added properties to token

--- a/build.gradle
+++ b/build.gradle
@@ -39,11 +39,11 @@ jar {
 }
 
 publishing {
-	repositories {
+	/*repositories {
 	    maven {
 	        url manveUrlWrite
 	    }
-	}
+	}*/
     publications {
         mavenJava(MavenPublication) {
         	groupId 'com.odontoweb.microservices'
