--- a/build.gradle
+++ b/build.gradle
@@ -22,11 +22,11 @@ dependencies {
 	compile ('org.springframework.boot:spring-boot-starter-data-jpa:1.3.5.RELEASE')
 	compile ('org.springframework.boot:spring-boot-starter-jetty:1.3.5.RELEASE')
 	compile ('io.jsonwebtoken:jjwt:0.6.0')
-	compile ('org.hibernate:hibernate-core:5.2.13.Final')
-    compile ('org.hibernate:hibernate-c3p0:5.2.13.Final')
-    compile ('org.hibernate:hibernate-entitymanager:5.2.13.Final')
+	compile ('org.hibernate:hibernate-core:4.3.11.Final')
+    compile ('org.hibernate:hibernate-c3p0:4.3.11.Final')
+    compile ('org.hibernate:hibernate-entitymanager:4.3.11.Final')
     compile ('org.postgresql:postgresql:9.4.1208')
-    compile ('com.google.code.gson:gson:2.8.2')
+    //compile ('com.google.code.gson:gson:2.8.2')
     
 }
 
@@ -36,7 +36,7 @@ configurations {
 
 jar {
 	baseName = 'arquitetura'
-	version = '1.0'
+	version = '2.0'
 	from configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
 }
 
@@ -50,7 +50,7 @@ publishing {
         mavenJava(MavenPublication) {
         	groupId 'com.odontoweb.microservices'
             artifactId 'arch'
-            version '1.0'
+            version '2.0'
             from components.java
         }
     }
