--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,9 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 repositories {
-	mavenCentral()
+	maven {
+		url "https://repo1.maven.org/maven2"
+	}
 	jcenter()
 }
 
